add sanity caching, add page transition, add image zoom to image gallery

--- a/web/public/manifest.json
+++ b/web/public/manifest.json
@@ -3,9 +3,9 @@
   "name": "Velkommen til Fagertun",
   "icons": [
     {
-      "src": "logo.svg",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/svg",
+      "src": "logo40.png",
+      "sizes": "40x40",
+      "type": "image/png",
       "purpose": "maskable"
     },
     {
